k8s-manifest/infra/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/group.name: three-tier
    alb.ingress.kubernetes.io/group.order: "10"

    alb.ingress.kubernetes.io/healthcheck-path: /readyz
    alb.ingress.kubernetes.io/success-codes: "200"

spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3500
